--- a/package.json
+++ b/package.json
@@ -51,8 +51,12 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "15.0.1",
+    "gamma": "^1.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "matrix-js": "^1.7.1",
+    "matrix-js-sdk": "^34.9.0",
+    "ml-matrix": "^6.12.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
